--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,6 +18,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint
+        python -m pip install --upgrade setuptools wheel
+        python -m pip install --upgrade pycryptodome
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
